<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".EditTodoFragment">

    <EditText
        android:id="@+id/edit_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:textColorHint="@color/white"
        android:hint="@string/edit_Title"
        android:textColor="@color/white"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:ems="10"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/edit_Description"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:ems="10"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/edit_date"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginBottom="5sp"
        android:text="@string/edit_priority" />

    <RadioGroup
        android:id="@+id/edit_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_high_priority"
            android:text="@string/edit_high" />

        <RadioButton
            android:id="@+id/edit_rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_medium_priority"
            android:text="@string/edit_medium" />

        <RadioButton
            android:id="@+id/edit_rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_low_priority"
            android:text="@string/edit_low" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/edit_chk_iscomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:textColor="@color/white"
        android:layout_weight="0"
        android:text="@string/edit_is_complete" />


        <Button
            android:id="@+id/edit_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/edit_save" />

        <Button
            android:id="@+id/edit_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/cancel" />


</LinearLayout>